# wildwoodag-v3

./: .gitignore  LICENSE  README.md  cal.js  extra_settings.py  package-lock.json  package.json  pubcrank.hjson
content/pastors-pen/: convert.py  index.md  pyproject.toml
content/pastors-pen/2022/: 02-13-character-of-the-new-man.md  02-20-seasons-of-prayer-and-fasting.md  02-27-faith-by-my-works.md  03-06-meditation-and-memorization-of-the-word-of-god.md  03-13-but-the-greatest-of-these-is-love.md  03-20-god-the-provider.md  04-03-beauty-for-ashes.md  04-10-sunday-is-on-the-way.md  04-17-the-empty-tomb-says-it-all.md  04-24-effective-fervent-prayer.md  05-01-listening-is-a-skill.md  05-08-honor-your-father-and-mother.md  05-15-spiritual-inheritance.md  05-23-where-hour-treasure-is-there-is-your-heart.md  05-29-recipe-for-failure-or-success.md  06-05-less-of-me-and-more-of-you.md  06-12-envy-s-disastrous-children.md  06-19-emulating-god-the-father.md  06-26-glorify-the-lord-with-service.md  07-10-curve-ball.md  07-17-vacation-bible-school-starting-today.md  07-25-power-over-sin.md  07-31-improve-your-serve.md  08-07-prince-of-peace.md  08-14-follow-me-as-i-follow-christ.md  08-28-celebrating-50-years.md  09-04-god-s-plan.md  09-12-wisdom.md  09-18-stewardship.md  09-26-praise-the-lord.md  10-14-knowing-him.md  11-06-choose-life.md  11-28-crumbs-in-the-carpet.md  12-04-waiting-in-prayer.md  12-18-the-gift.md  12-25-the-wisdom-of-christmas.md
content/pastors-pen/2023/: 01-01-more-of-you-less-of-me.md  01-08-people-of-prayer.md  01-15-power-of-prayer.md  06-05-wisdom.md  (+31 more)
(+100 files in other folders)
