[project]
name = "pastors-pen"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = ["hjson>=3.1.0", "frontmatter>=3.0.8", "pubcrank-cli>=0.9.0"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
